[gd_scene load_steps=7 format=3 uid="uid://5er1m8wsi3x6"]

[ext_resource type="Texture2D" uid="uid://8p3iw303ye44" path="res://generic/materials/textures/tile_64px_diff.png" id="1_nnkjf"]
[ext_resource type="Script" path="res://lib/dragger/dragger.gd" id="1_t4ceu"]
[ext_resource type="FontFile" uid="uid://drvjsmav1gcj3" path="res://generic/fonts/ibm_plex_mono.otf" id="3_di0uu"]
[ext_resource type="Texture2D" uid="uid://dxnrapd5778a0" path="res://lib/dragger/textures/arrow.png" id="4_hebx0"]
[ext_resource type="Material" uid="uid://wv0q1g0bmi10" path="res://lib/dragger/materials/mat_dissolve.tres" id="4_ofanv"]
[ext_resource type="Texture2D" uid="uid://df53qugtj3cxj" path="res://generic/textures/ui_corner.png" id="6_uhlv0"]

[node name="Dragger" type="CanvasLayer"]
script = ExtResource("1_t4ceu")

[node name="Underlay" type="TextureRect" parent="."]
visible = false
modulate = Color(0.25, 0.25, 0.25, 1)
z_index = -2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nnkjf")
expand_mode = 1
stretch_mode = 1

[node name="ArrowRoot" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 4.0
offset_bottom = 4.0

[node name="ArrowLeft" type="TextureRect" parent="ArrowRoot"]
material = ExtResource("4_ofanv")
offset_left = -305.0
offset_top = -90.0
offset_bottom = 92.0
texture = ExtResource("4_hebx0")
expand_mode = 1
stretch_mode = 5

[node name="ArrowRight" type="TextureRect" parent="ArrowRoot"]
offset_left = 305.0
offset_top = 90.0
offset_right = 610.0
offset_bottom = 272.0
rotation = 3.14159
texture = ExtResource("4_hebx0")
expand_mode = 1
stretch_mode = 5

[node name="Debug" type="RichTextLabel" parent="."]
z_index = 1
clip_contents = false
offset_left = 32.0
offset_top = 32.0
offset_right = 172.0
offset_bottom = 87.0
mouse_filter = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_constants/line_separation = -2
theme_override_fonts/normal_font = ExtResource("3_di0uu")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[Debug]"
scroll_active = false
autowrap_mode = 0

[node name="Corner" type="TextureRect" parent="Debug"]
z_index = -1
layout_mode = 0
offset_left = -8.0
offset_top = -6.0
offset_right = 118.0
offset_bottom = 27.0
mouse_filter = 2
texture = ExtResource("6_uhlv0")
expand_mode = 1
flip_h = true
flip_v = true
